# Aizorix-Freelancer

./: .env.example  .gitignore  .golangci.yml  DEMO.md  Makefile  README.md  ROADMAP.md  docker-compose.yml  go.work  go.work.sum  sqlc.yaml
.github/: dependabot.yml
.github/workflows/: README.md  build-push.yml  ci-backend.yml  ci-frontend.yml  ci-integration.yml  ci-tracker.yml  deploy.yml  release.yml  security.yml  terraform.yml
api/: buf.gen.yaml
api/openapi/: gateway.yaml
db/: ERD.md
db/migrations/: 000001_extensions_and_enums.down.sql  000001_extensions_and_enums.up.sql  000002_auth_and_rbac.down.sql  000002_auth_and_rbac.up.sql  000003_profiles_and_skills.down.sql  000003_profiles_and_skills.up.sql  000004_marketplace.down.sql  000004_marketplace.up.sql  000005_contracts.down.sql  000005_contracts.up.sql  000006_timetracking.down.sql  000006_timetracking.up.sql  000007_screenshots.down.sql  000007_screenshots.up.sql  000008_payments_escrow.down.sql  000008_payments_escrow.up.sql  000009_reviews_messaging_notifications.down.sql  000009_reviews_messaging_notifications.up.sql  000010_audit_fraud_outbox.down.sql  000010_audit_fraud_outbox.up.sql  000011_escrow_idempotency.down.sql  000011_escrow_idempotency.up.sql  000012_analytics_rollups.down.sql  000012_analytics_rollups.up.sql  000013_escrow_fund_idempotency.down.sql  000013_escrow_fund_idempotency.up.sql  (+2 more)
deploy/: README.md  docker-compose.devrun.yml  docker-compose.services.yml
desktop-tracker/: README.md  index.html  package.json  vite.config.ts
desktop-tracker/src-tauri/: Cargo.toml  tauri.conf.json
desktop-tracker/src-tauri/capabilities/: default.json
desktop-tracker/src-tauri/src/: activity.rs  api.rs  apps.rs  commands.rs  config.rs  crypto.rs  db.rs  error.rs  main.rs  scheduler.rs  screenshot.rs  state.rs  sync.rs
desktop-tracker/src-tauri/tools/: genicon.go
docs/: ACTIVITY.md  ARCHITECTURE.md  COMPLIANCE.md  FRAUD.md  HANDOFF.md  LOCAL_DEV.md  RUN_LOG.md  SCREENSHOT_PIPELINE.md  SECURITY.md
scripts/: demo-down.ps1  demo.ps1  smoke.ps1  smoke.sh
services/: README.md  TESTING.md
web/: .env.local.example  .eslintrc.json  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
(+339 files in other folders)
