[package]
name = "aizorix-tracker"
version = "1.0.0"
description = "Aizorix verified-work desktop time tracker"
authors = ["Aizorix"]
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon"] }
tauri-plugin-single-instance = "2.0.0"
tauri-plugin-autostart = "2.0.0"

# Async runtime + HTTP
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Local store (offline queue) — bundled SQLite, WAL mode
rusqlite = { version = "0.40", features = ["bundled"] }

# Crypto: per-capture AES-256-GCM, Ed25519 device signing, hashing, secret storage
aes-gcm = "0.10"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"
keyring = "2.3"            # OS keychain for the device signing key + refresh token
base64 = "0.22"
zeroize = "1.8"

# Screenshots: capture + encode (WebP) + perceptual hash
xcap = "0.0.12"            # cross-platform screen capture (Win/macOS/Linux)
image = { version = "0.25", default-features = false, features = ["webp", "png"] }
img_hash = "3.2"          # perceptual hashing for duplicate detection

# Input activity (global counters; NOT a keylogger — counts only, no key identities)
rdev = "0.5"

# Active window / app + browser URL (per-OS implementations gated by cfg)
active-win-pos-rs = "0.8"

# Misc
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.9", features = ["v4", "v7"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_SystemInformation", "Win32_UI_Input_KeyboardAndMouse"] }

[features]
# `mock-capture` swaps real screen/input capture for deterministic fakes in CI.
mock-capture = []

[profile.release]
opt-level = "s"
lto = true
strip = true
panic = "abort"
